--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8"/>
     <link href="/favicon.png" rel="icon"/>
     <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
-    <title>CV Application</title>
+    <title>CV Generator</title>
 </head>
 <body>
 <div id="root"></div>
